tests/ui/dst/issue-90528-unsizing-not-suggestion-110063.stderr
error[E0277]: the trait bound `[u8; 1]: Test` is not satisfied
  --> $DIR/issue-90528-unsizing-not-suggestion-110063.rs:9:18
   |
LL |     needs_test::<[u8; 1]>();
   |                  ^^^^^^^ the trait `Test` is not implemented for `[u8; 1]`
   |
   = help: the trait `Test` is implemented for `&[u8]`
note: required by a bound in `needs_test`
  --> $DIR/issue-90528-unsizing-not-suggestion-110063.rs:4:18
   |
LL | fn needs_test<T: Test>() -> T {
   |                  ^^^^ required by this bound in `needs_test`

error[E0277]: the trait bound `[u8; 1]: Test` is not satisfied
  --> $DIR/issue-90528-unsizing-not-suggestion-110063.rs:11:22
   |
LL |     let x: [u8; 1] = needs_test();
   |                      ^^^^^^^^^^^^ the trait `Test` is not implemented for `[u8; 1]`
   |
   = help: the trait `Test` is implemented for `&[u8]`
note: required by a bound in `needs_test`
  --> $DIR/issue-90528-unsizing-not-suggestion-110063.rs:4:18
   |
LL | fn needs_test<T: Test>() -> T {
   |                  ^^^^ required by this bound in `needs_test`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
